--- a/css/style.css
+++ b/css/style.css
@@ -219,3 +219,9 @@ form button:hover {
 .swiper-pagination-bullet-active {
     background: #f39c12;
 }
+
+
+/* MEU TESTE - AJUSTAR DEPOIS */
+section {
+    background-color: #5ac2d4;
+}
