--- a/css/style.css
+++ b/css/style.css
@@ -223,5 +223,5 @@ form button:hover {
 
 /* MEU TESTE - AJUSTAR DEPOIS */
 section {
-    background-color: #5ac2d4;
+    background-color: #71f058;
 }
