Atualizar contato para teste

--- a/css/style.css
+++ b/css/style.css
@@ -223,5 +223,5 @@ form button:hover {
 
 /* MEU TESTE - AJUSTAR DEPOIS */
 section {
-    background-color: #71f058;
+    background-color: #f3ec82;
 }
