--- a/css/style.css
+++ b/css/style.css
@@ -12,33 +12,52 @@
 
 .emConstrucao {
     position: fixed;
-    text-align: center;
     background-color: #0e0e0e;
     color: #f70404;
     width: 100%;
-    margin-top: -213px;
-    padding-bottom: 10px;
+    margin-top: -211px;
+    padding: 5px;
+    text-align: center;
+}
+
+.emConstrucao h1 {
+    font-size: 100%;
+    text-align: center;
+    padding-top: 3px;
 }
 
 .sessao_inicial {
-    margin-top: 213px;
+    margin-top: 209px;
 }
 
 @media (max-width: 768px) {
     .emConstrucao {
-        font-size: 22px;
-        text-align: center;
-        padding-top: 7px;
-        margin-top: -213px;
-    }
-
-    div.emConstrucao h1 {
         font-size: 100%;
         text-align: center;
+        padding-top: 7px;
+        margin-top: -200px;
+    }
+
+    .emConstrucao h1 {
+        font-size: 2rex;
+    }
+
+    header {
+        margin-top: 10px;
+
+    }
+
+    .menu-toggle {
+        text-align: top center;
+    }
+
+    header nav div.menu-colunas {
+        padding: 0;
+        margin: 0;
     }
 
     .sessao_inicial {
-    margin-top: 213px;
+        margin-top: 196px;
     }
 }
 
@@ -78,7 +97,7 @@ header {
     left: 0;
     width: 100%;
     z-index: 10;
-    margin-top: 45px; /*==APAGAR DEPOIS DE PRONTP==*/
+    margin-top: 29px; /*==APAGAR DEPOIS DE PRONTP==*/
 }
 
 div.logo_cabecalho img {
