--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
     background-color: #0e0e0e;
     color: #f70404;
     width: 100%;
-    margin-top: -211px;
+    margin-top: -150px;
     padding: 5px;
     text-align: center;
 }
@@ -27,15 +27,16 @@
 }
 
 .sessao_inicial {
-    margin-top: 209px;
+    margin-top: 150px;
+    margin-bottom: -18px;
 }
 
 @media (max-width: 768px) {
     .emConstrucao {
         font-size: 100%;
         text-align: center;
-        padding-top: 7px;
-        margin-top: -200px;
+        padding-top: 2px;
+        margin-top: -150px;
     }
 
     .emConstrucao h1 {
@@ -43,8 +44,8 @@
     }
 
     header {
-        margin-top: 10px;
-
+        margin-top: 5px;
+        margin-bottom: 5px;
     }
 
     header nav div.menu-colunas {
@@ -53,7 +54,8 @@
     }
 
     .sessao_inicial {
-        margin-top: 196px;
+        margin-top: 150px;
+        margin-bottom: -18px;
     }
 }
 
@@ -97,8 +99,7 @@ header {
 }
 
 div.logo_cabecalho img {
-    width: 13em;
-    
+    width: 10em;
 }
 
 .logo_cabecalho h1 {
@@ -156,6 +157,10 @@ nav ul li a:hover {
         display: block;
     }
 
+    div.logo_cabecalho img {
+        width: 10em;
+    }
+
     nav {
         display: none;
         position: absolute;
@@ -165,7 +170,7 @@ nav ul li a:hover {
         background: #BF4539;
         text-align: center;
         padding: 2px 0;
-        margin-top: 83px;
+        margin-top: 51px;
     }
 
     nav .esconder_link_menu { /* ESCONDE A LISTA AO CLICAR NO MENU RESPONSIVO */
@@ -314,7 +319,7 @@ form button:hover {
 /*    DETALHES DO IMÓVEL          */
 /* ============================== */
 .property-detail {
-    max-width: 600px;
+    max-width: 100%;
     margin: auto;
     background: white;
     padding: 20px;
