--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@ header {
     justify-content: space-between;
     align-items: center;
     /* background: #fdfdfd; */
-    background: linear-gradient(to top, #f8160125, #fceb02);
+    background: linear-gradient(to top, #f8160125, #fceb0241);
     color: #BF4539;
     padding: 5px 25px;
     position: fixed;
