Atualizei a página de imóveis
Atualização geral

--- a/css/style.css
+++ b/css/style.css
@@ -241,6 +241,12 @@ section {
     text-align: center;
 }
 
+section.imoveis {
+    width: 100%;
+    max-width: 1200%;
+    background: #f3c7c3;
+}
+
 /* ============================== */
 /*            FORMULÁRIO          */
 /* ============================== */
@@ -286,7 +292,7 @@ form button:hover {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px;
-    max-width: 900px;
+    max-width: 1200px;
     margin: auto;
     padding: 20px;
 }
@@ -304,6 +310,13 @@ form button:hover {
     height: 200px;
     object-fit: cover;
     border-radius: 8px;
+    transform-origin: bottom; /* Faz o crescimento começar do topo */
+}
+
+/* Efeito hover */
+.property img:hover {
+    transform: scale(1.05);
+    transition: all 0.4s ease; /* Adiciona uma transição suave */
 }
 
 .property h3 {
